hphp/hack/test/typecheck/reactive/cond_reactive_ret_type2.php.exp
File "cond_reactive_ret_type2.php", line 25, characters 10-18:
Reactive functions can only call other reactive functions. (Typing[4200])
File "cond_reactive_ret_type2.php", line 15, characters 19-21:
This function is non-reactive.
